# pmu_Roboflex

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md  quick_bench.sh
benchmark/: scipy_bench.py
benchmark/cpu-benchmark/: cpu-benchmark.py
benchmark/example/: config.rbf.yaml
benchmark/example_config/: example.json
benchmark/qrcode/: qrcode_scan.py
benchmark/robflex_event_change/: robflex_api.py  robflex_event_change.py
benchmark/signal_context/: Makefile  test.c
benchmark/thread_switch_ebpf/: Makefile  monitor_task.py  plot.py  plot_compare.py  run.sh  taskA.c  taskB.c
benchmark/thread_switch_ebpf/config/: config_pmu.yaml  config_rt.yaml
benchmark/thread_switch_ebpf/log/: event_log_pmu.txt  event_log_rt.txt
benchmark/thread_switch_ebpf/script/: run_taskA_pmu.sh  run_taskA_rt.sh  run_taskB_pmu.sh  run_taskB_rt.sh
benchmark/xsched_hpf_shmm/: Makefile  README.md  cuda_bench_app.cu  run_bench.py
benchmark/yolo/: pmu_tick_api.py  yolo11m.py  yolo11m_pmu.py  yolo26.py
inc/: robflex_api.h  robflex_config.h  robflex_def.h  robflex_event.h
script/: activate.sh  activate_i.sh  activate_y.sh  build.sh  deactivate.sh  init_project.sh  startup_daemon.sh  startup_monitor.sh  startup_xsched.sh
script/patches/: xsched.patch
src/: dym_hook.c  proc_stat.c  robflex_api.c  robflex_config.c  server.c
src/msg/: shared_context.idl
src/python/: pmu_tick_api.py  robflex_api.py
